# CMake-Tutorial

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeTutorialConfig.h.in  NOTES  README.md  cmaketutorial.cpp
cmake-modules/: modify-regular_var.cmake  printdirs.cmake  sha-er.cmake  show-cmake-current-lists.cmake
cmake-scripts/: create-file.cmake
level1/: level1.cmake
math/: CMakeLists.txt
subproject1/: CMakeLists.txt
subproject2/: CMakeLists.txt
subproject2/subproject2_1/: CMakeLists.txt
subproject2/subproject2_2/: CMakeLists.txt
